<resources>
    <string name="app_name">Sonic Canvas</string>
    <string name="start_visualizer">Start Visualizer</string>
    <string name="stop_visualizer">Stop Visualizer</string>
    <string name="waveform">Waveform</string>
    <string name="bars">Bars</string>
    <string name="circular">Circular</string>
    <string name="permission_required">Please allow microphone access for visualization</string>
</resources>
